[package]
name = "rna-world"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3"
actix-rt = "2"
actix-web = "3"
config = "0.11.0"
csv = "1.1"
deadpool-postgres = "0.5"
dotenv = "0.15.0"
derive_more = "0.99"
env_logger = "0.9.0"
serde = { version = "1", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["v4"] }
